--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "viethqb/laravel-logging-sensitive",
-    "version": "1.0.8",
+    "version": "1.1.0",
     "description": "Laravel Logging Sensitive By viethqb",
     "type": "library",
     "license": "MIT",
@@ -18,6 +18,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.1|^8.2",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "monolog/monolog": "^2.0"
     }
 }
