--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "viethqb/laravel-logging-sensitive",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Laravel Logging Sensitive By viethqb",
     "type": "library",
     "license": "MIT",
@@ -17,7 +17,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.1|^8.2",
+        "php": "^7.4|^8.1|^8.2",
         "illuminate/support": "^8.0|^9.0|^10.0",
         "monolog/monolog": "^2.0"
     }
